[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netpotato"
version = "0.1.3"
description = "Explicit IP guard for network-sensitive CLI commands"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "urays", email = "urays.cc@gmail.com" }
]
maintainers = [
  { name = "urays", email = "urays.cc@gmail.com" }
]
keywords = [
  "cli",
  "command-line",
  "ip",
  "network",
  "security",
  "guard",
  "linux",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
netpotato = "netpotato.cli:run_cli"

[project.urls]
Homepage = "https://github.com/urays/netpotato"
Repository = "https://github.com/urays/netpotato"
Issues = "https://github.com/urays/netpotato/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["netpotato*"]
